# ayoomoney

./: .gitignore  README.md  pyproject.toml  requirements.txt
aiomoney/: authorization.py  request.py  wallet.py
aiomoney/types/: __init__.py  account_info.py  enums.py  operation_details.py  operation_history.py  payment.py
ayoomoney/: __init__.py  errors.py  wallet.py
ayoomoney/auth/: __init__.py  __main__.py  auto.py  base.py  simple.py
ayoomoney/types/: __init__.py  enums.py  notification.py  operation.py  operation_details.py  operation_history.py  payment.py  utils.py
examples/: authorization.py  history.py  payments.py  wallet_info.py
examples/notification/: .env.example  README.md  requirements.txt
examples/notification/bot/: __main__.py  containers.py  logger.py  main.py  settings.py
examples/notification/bot/broker/: __init__.py  base.py  payment.py
examples/notification/bot/handlers/: __init__.py  payment.py  start.py
examples/notification/bot/keyboards/: __init__.py  payment.py  start.py
examples/notification/bot/models/: __init__.py  payment.py
examples/notification/bot/repositories/: __init__.py  base.py  payment.py
examples/notification/bot/schemes/: __init__.py  payment.py
examples/notification/migration/: env.py
examples/notification/migration/versions/: 2c89296bc6fd_init.py
examples/notification/notify/: main.py  settings.py
