[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomoney"
version = "1.0.12"
authors = [
  { name="LazyDeus", email="dimaprodeus@yandex.ru" },
  { name="fofmow", email="fofmow@gmail.com" },
]
description = "Простая асинхронная библиотека для работы с API ЮMoney"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx~=0.27.2",
    "pydantic~=2.9.1",
]

[project.urls]
"Homepage" = "https://github.com/Demetrous-fd/aiomoney"
"Bug Tracker" = "https://github.com/Demetrous-fd/aiomoney/issues"